--- a/Tex/src/plotsStyle.tex
+++ b/Tex/src/plotsStyle.tex
@@ -56,6 +56,7 @@
 \pgfplotsset{skiplist1000/.style={%
 	   width=\textwidth,
        ymin=0,ymax=100000,
+       scaled y ticks=base 10:-3,
        xtick={2,4,8,16,32}, 
        legend columns=-1,
 	   legend entries={\autoSkiplist,\bronson, \skiplist,
